--- a/style.css
+++ b/style.css
@@ -127,11 +127,7 @@ header {
 
 }
 
-/* 
-.plan img {
-    padding-left: 40px;
-    align-items: center;
-} */
+
 .pimg {
     text-align: center;
 }
@@ -187,6 +183,57 @@ header {
     font-size: 20px;
     color: #F15B22;
 
+}
+
+
+/* why us */
+
+
+.why {
+    background-image: url('images/watch.png');
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: cover;
+}
+
+.whytitel {
+
+    font-weight: 700;
+    font-size: 40px;
+    text-align: center;
+    margin-bottom: 30px;
+    color: white;
+    margin-top: 120px;
+    padding-top: 70px;
+
+}
+
+.whyus {
+    display: flex;
+    margin-left: 2%;
+    margin-right: 2%;
+    padding: 1%;
+
+}
+
+.chooseus {
+    box-shadow: 2px 2px 10px rgb(228, 227, 225);
+    margin: .5% 1% 4% 1.5%;
+    padding: 1% 1% 4% 2.3%;
+    border-radius: 18px;
+
+    width: 20%;
+}
+
+.choosetitel {
+    color: white;
+    padding-top: 4%;
+}
+
+.chooseinfo {
+    margin-top: 4%;
+    font-size: 17px;
+    color: white;
 }
 
 /* footer style */
